--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
           </ul>
           <div class="content">
             <h2>Dick Chocolate</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ducimus ipsa, nulla ipsum ad dolor modi tempore harum quibusdam alias maxime impedit cumque aliquam dolore necessitatibus provident maiores! Quasi, soluta.</p>
           </div>
         </article>
     <footer class="footer">
